Bug 1222747 - fix alignment of forward button on OSX devedition theme, r=dao
UltraBlame original commit: 92cb9839960be04e1c31633dd0efc289d2a500a1

--- a/browser/themes/osx/devedition.css
+++ b/browser/themes/osx/devedition.css
@@ -41,6 +41,18 @@
 
 #forward-button {
   -moz-border-start: none !important;
+  
+
+
+
+
+
+
+
+
+
+  margin-left: -1px;
+  padding-left: 1px;
 }
 
 #forward-button > .toolbarbutton-icon {
